--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_database: ^10.0.2
   firebase_core: ^2.1.0
   cached_network_image: ^3.2.2
+  flutter_bloc: ^8.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
