--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ flutter:
     - assets/images/
     - assets/images/pngs/
     - assets/images/svgs/
+    - assets/images/chefs/
+    - assets/images/foods/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
